--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <th>20xx.04.01</th>
-                    <td><a href="#">開校100周年記念特別企画　インターネット・アカデミーと共同講演会開催</a></td>
+                    <td><a href="#">開校100周年記念特別企画、インターネット・アカデミーと共同講演会開催</a></td>
                 </tr>
             </table>
         </section>
